fix: remove center alignment from table cell text

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,6 @@ tr.ok {
   }
 }
 td {
-  text-align: center;
   vertical-align: middle;
   padding: 0.5rem;
   border: 1px solid #ddd;
